--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@types/firebase": "^3.2.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
